# advent_of_code_2024

./: .gitignore  Cargo.toml  README.md
benches/: day01_benchmark.rs  day02_benchmark.rs  day03_benchmark.rs  day04_benchmark.rs  day05_benchmark.rs  day06_benchmark.rs  day07_benchmark.rs  day08_benchmark.rs  day09_benchmark.rs  day10_benchmark.rs  day11_benchmark.rs  day12_benchmark.rs  day13_benchmark.rs  day14_benchmark.rs  day15_benchmark.rs  day16_benchmark.rs  day17_benchmark.rs  day18_benchmark.rs  day19_benchmark.rs  day1_benchmarks.rs  day20_benchmark.rs  day21_benchmark.rs  day22_benchmark.rs  day23_benchmark.rs  day24_benchmark.rs  day25_benchmark.rs  day2_benchmarks.rs  day3_benchmark.rs  day4_benchmark.rs  day5_benchmark.rs  day6_benchmark.rs  day7_benchmark.rs  day8_benchmark.rs  day9_benchmark.rs
src/: day01.rs  day05.rs  day06.rs  day08.rs  day09.rs  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
