[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
ndarray = "0.16.1"
nom = "7.1.3"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "day3_benchmark"
harness = false

[[bench]]
name = "day4_benchmark"
harness = false

[[bench]]
name = "day5_benchmark"
harness = false

[[bench]]
name = "day6_benchmark"
harness = false
