[package]
name = "advent_of_code_2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.93"
itertools = "0.13.0"
ndarray = "0.16.1"
nom = "7.1.3"
rayon = "1.10.0"

[dev-dependencies]
criterion = "0.5.1"
proptest = "1.5.0"

[[bench]]
name = "day01_benchmark"
harness = false

[[bench]]
name = "day02_benchmark"
harness = false

[[bench]]
name = "day03_benchmark"
harness = false

[[bench]]
name = "day04_benchmark"
harness = false

[[bench]]
name = "day05_benchmark"
harness = false

[[bench]]
name = "day06_benchmark"
harness = false

[[bench]]
name = "day07_benchmark"
harness = false

[[bench]]
name = "day08_benchmark"
harness = false

[[bench]]
name = "day09_benchmark"
harness = false

[[bench]]
name = "day10_benchmark"
harness = false

[[bench]]
name = "day11_benchmark"
harness = false

[[bench]]
name = "day12_benchmark"
harness = false

[[bench]]
name = "day13_benchmark"
harness = false

[[bench]]
name = "day14_benchmark"
harness = false

[[bench]]
name = "day15_benchmark"
harness = false

[[bench]]
name = "day16_benchmark"
harness = false

[[bench]]
name = "day17_benchmark"
harness = false

[[bench]]
name = "day18_benchmark"
harness = false

[[bench]]
name = "day19_benchmark"
harness = false
